<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.bewareofraj.userlist.users.UserInfoActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txt_name_label"
        android:id="@+id/txt_name"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/txt_id_field"
        android:id="@+id/txt_id_label"
        android:layout_below="@+id/txt_name"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/id_placeholder"
        android:id="@+id/txt_id_placeholder"
        android:layout_below="@+id/txt_name"
        android:layout_toEndOf="@+id/txt_id_label" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txt_username_field"
        android:id="@+id/txt_username_field"
        android:layout_below="@+id/txt_id_label"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/username_placeholder"
        android:id="@+id/txt_username"
        android:layout_above="@+id/txt_email_field"
        android:layout_toEndOf="@+id/txt_username_field"
        android:layout_marginLeft="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txt_email_field"
        android:id="@+id/txt_email_field"
        android:layout_below="@+id/txt_username_field"
        android:layout_alignParentStart="true"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/email_placeholder"
        android:id="@+id/txt_email"
        android:layout_toRightOf="@+id/txt_email_field"
        android:layout_below="@+id/txt_username"
        android:layout_marginLeft="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txt_address"
        android:id="@+id/txt_address"
        android:layout_below="@+id/txt_email_field"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/street_placeholder"
        android:id="@+id/txt_street"
        android:layout_below="@+id/txt_address"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/suite_placeholder"
        android:id="@+id/txt_suite"
        android:layout_below="@+id/txt_street"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/cityzip_placeholder"
        android:id="@+id/txt_cityzip"
        android:layout_below="@+id/txt_suite"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txt_geo_field"
        android:id="@+id/txt_geo_field"
        android:layout_below="@+id/txt_cityzip"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/txt_lat_field"
        android:id="@+id/txt_lat_field"
        android:layout_below="@+id/txt_geo_field"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/lat_placeholder"
        android:id="@+id/txt_lat"
        android:layout_above="@+id/txt_phone_field"
        android:layout_toEndOf="@+id/txt_lat_field"
        android:layout_marginLeft="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/txt_lng_field"
        android:id="@+id/txt_lng_field"
        android:layout_alignTop="@+id/txt_lat"
        android:layout_alignStart="@+id/txt_username"
        android:layout_marginLeft="30dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/lng_placeholder"
        android:id="@+id/txt_lng"
        android:layout_alignTop="@+id/txt_lng_field"
        android:layout_toEndOf="@+id/txt_lng_field"
        android:layout_marginLeft="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txt_phone_field"
        android:id="@+id/txt_phone_field"
        android:layout_below="@+id/txt_lat_field"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/phone_placeholder"
        android:id="@+id/txt_phone"
        android:layout_alignTop="@+id/txt_phone_field"
        android:layout_toRightOf="@+id/txt_phone_field"
        android:layout_marginLeft="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txt_website_field"
        android:id="@+id/txt_web_site_field"
        android:layout_below="@+id/txt_phone_field"
        android:layout_alignParentStart="true"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/website_placeholder"
        android:id="@+id/txt_website"
        android:layout_alignTop="@+id/txt_web_site_field"
        android:layout_toEndOf="@+id/txt_web_site_field"
        android:layout_marginLeft="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txt_company_field"
        android:id="@+id/txt_company_field"
        android:layout_below="@+id/txt_web_site_field"
        android:layout_alignParentStart="true"
        android:textStyle="bold"
        android:layout_marginTop="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/txt_company_name_field"
        android:id="@+id/txt_company_name_field"
        android:layout_below="@+id/txt_company_field"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/company_name_placeholder"
        android:id="@+id/txt_company_name"
        android:layout_alignTop="@+id/txt_company_name_field"
        android:layout_alignStart="@+id/txt_phone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/catchphrase_placeholder"
        android:id="@+id/txt_catchphrase"
        android:layout_below="@+id/txt_company_name_field"
        android:layout_alignParentStart="true"
        android:textStyle="italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/bs_placeholder"
        android:id="@+id/txt_bs"
        android:layout_below="@+id/txt_catchphrase"
        android:layout_alignParentStart="true" />
</RelativeLayout>
